--- a/FrontEnd/FrontEndCode/src/app/pages/login/login.component.html
+++ b/FrontEnd/FrontEndCode/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="row no-gutter">
+  <div class="row no-gutter gradient-bg">
       <!-- The image half -->
       <!-- <div class="col-md-6 d-none d-md-flex bg-image">
   </div> -->
@@ -19,7 +19,7 @@
     </p>
   </div> -->
       <!-- The content half -->
-      <div class="col-md-6 bg-light">
+      <div class="col-md-6 bg-light gradient-bg">
     <!-- <div class="text-center mt-5">
       <img src="assets/ofs.jpg" alt="Logo" width="200">
     </div> -->
@@ -32,8 +32,8 @@
                       <div class="col-lg-10 col-xl-7 mx-auto">
                           <!-- <h3 class="display-4">Split page!</h3>
                           <p class="text-muted mb-4">Create a login split page using Bootstrap 4.</p> -->
-            <div class="text-center mb-4">
-              <img src="assets/ofs.jpg" alt="Logo" width="200">
+            <div class="text-center mb-4 " >
+              <img src="assets/ofs.jpg" alt="Logo" width="200" class="rounded-image">
               </div>
                           <form>
               
