--- a/FrontEnd/FrontEndCode/src/app/pages/login/login.component.html
+++ b/FrontEnd/FrontEndCode/src/app/pages/login/login.component.html
@@ -47,9 +47,11 @@
                                   <input id="customCheck1" type="checkbox" checked class="custom-control-input">
                                   <label for="customCheck1" class="custom-control-label">Remember password</label>
                               </div>
-                              <button type="submit" class="btn btn-primary btn-block text-uppercase mb-2 rounded-pill shadow-sm" (click)="login()">Sign in</button>
+                              <button type="submit" class="btn btn-primary btn-block text-uppercase mb-2 rounded-pill shadow-sm" (click)="login()">Admin Sign in</button>
                               <!-- <div class="text-center d-flex justify-content-between mt-4"><p>Code by <a href="#" class="font-italic text-muted"> 
                                       <u>Jassa</u></a></p></div> -->
+
+                                      <button type="submit" class="btn btn-primary btn-block text-uppercase mb-2 rounded-pill shadow-sm" (click)="loginSiteuser()">Site User Sign in</button>
                           </form>
                       </div>
                   </div>
