--- a/FrontEnd/FrontEndCode/src/app/pages/dashboard/dashboard.component.html
+++ b/FrontEnd/FrontEndCode/src/app/pages/dashboard/dashboard.component.html
@@ -98,60 +98,56 @@
                     </mat-card>
                 </div>
 
-                <div class="example-header">
-                    <!-- <mat-form-field>
+                <div class="example-container mat-elevation-z8">
+                    <div class="example-header">
+                      <!-- <mat-form-field>
                         <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-
-                    </mat-form-field> -->
-                  </div>
+                      </mat-form-field> -->
+                    </div>
                   
-                  <div class="example-container mat-elevation-z8">
-                    <mat-table [dataSource]="dataSource" matSort>
-                      <!-- Define table columns here -->
+                    <mat-table #table [dataSource]="dataSource">
+                  
+                      <!-- Username Column -->
                       <ng-container matColumnDef="username">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Username </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.username}} </mat-cell>
+                        <mat-header-cell *matHeaderCellDef> Username </mat-header-cell>
+                        <mat-cell *matCellDef="let element"> {{element.username}} </mat-cell>
                       </ng-container>
                   
+                      <!-- Meal Date Column -->
                       <ng-container matColumnDef="mealDate">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Meal Date </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.mealDate}} </mat-cell>
+                        <mat-header-cell *matHeaderCellDef> Meal Date </mat-header-cell>
+                        <mat-cell *matCellDef="let element"> {{element.mealdate}} </mat-cell>
                       </ng-container>
                   
+                      <!-- Meal Type Column -->
                       <ng-container matColumnDef="mealType">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Meal Type </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.mealType}} </mat-cell>
+                        <mat-header-cell *matHeaderCellDef> Meal Type </mat-header-cell>
+                        <mat-cell *matCellDef="let element"> {{element.mealtype}} </mat-cell>
                       </ng-container>
                   
+                      <!-- Program Column -->
                       <ng-container matColumnDef="program">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Program </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.program}} </mat-cell>
+                        <mat-header-cell *matHeaderCellDef> Program </mat-header-cell>
+                        <mat-cell *matCellDef="let element"> {{element.program}} </mat-cell>
                       </ng-container>
                   
+                      <!-- Meal Count Column -->
                       <ng-container matColumnDef="mealCount">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Meal Count </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.mealCount}} </mat-cell>
+                        <mat-header-cell *matHeaderCellDef> Meal Count </mat-header-cell>
+                        <mat-cell *matCellDef="let element"> {{element.mealcount}} </mat-cell>
                       </ng-container>
                   
+                      <!-- Comment Column -->
                       <ng-container matColumnDef="comment">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Comment </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.comment}} </mat-cell>
+                        <mat-header-cell *matHeaderCellDef> Comment </mat-header-cell>
+                        <mat-cell *matCellDef="let element"> {{element.comment}} </mat-cell>
                       </ng-container>
-                  
-                      <!-- Define the rest of your columns here -->
                   
                       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
                     </mat-table>
-                  
-                    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
                   </div>
                   
-                
-                
-            
-                
-                
             </main>
         </div>
     </body>
