--- a/FrontEnd/FrontEndCode/src/app/pages/login/login.component.html
+++ b/FrontEnd/FrontEndCode/src/app/pages/login/login.component.html
@@ -33,7 +33,7 @@
                           <!-- <h3 class="display-4">Split page!</h3>
                           <p class="text-muted mb-4">Create a login split page using Bootstrap 4.</p> -->
             <div class="text-center mb-4 " >
-              <img src="assets/ofs.jpg" alt="Logo" width="200" class="rounded-image">
+              <img src="assets/ofsnew.png" alt="Logo" width="200" class="rounded-image">
               </div>
                           <form>
               
