--- a/FrontEnd/FrontEndCode/src/app/pages/dashboard/dashboard.component.html
+++ b/FrontEnd/FrontEndCode/src/app/pages/dashboard/dashboard.component.html
@@ -104,34 +104,35 @@
 
                 <div class="example-container mat-elevation-z8">
                     <div class="example-header">
-                      <!-- <mat-form-field>
-                        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-                      </mat-form-field> -->
+                      <mat-form-field>
+                        <input matInput (keyup)="applyFilter($any($event.target).value)" placeholder="Filter">
+
+                      </mat-form-field>
                     </div>
                   
-                    <mat-table #table [dataSource]="dataSource">
+                    <mat-table #table [dataSource]="dataSource" matSort>
                   
                       <!-- Username Column -->
                       <ng-container matColumnDef="username">
-                        <mat-header-cell *matHeaderCellDef> Username </mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> Username </mat-header-cell>
                         <mat-cell *matCellDef="let element"> {{element.username}} </mat-cell>
                       </ng-container>
                   
                       <!-- Meal Date Column -->
                       <ng-container matColumnDef="mealDate">
-                        <mat-header-cell *matHeaderCellDef> Meal Date </mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>  Meal Date </mat-header-cell>
                         <mat-cell *matCellDef="let element"> {{element.mealdate}} </mat-cell>
                       </ng-container>
                   
                       <!-- Meal Type Column -->
                       <ng-container matColumnDef="mealType">
-                        <mat-header-cell *matHeaderCellDef> Meal Type </mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> Meal Type </mat-header-cell>
                         <mat-cell *matCellDef="let element"> {{element.mealtype}} </mat-cell>
                       </ng-container>
                   
                       <!-- Program Column -->
                       <ng-container matColumnDef="program">
-                        <mat-header-cell *matHeaderCellDef> Program </mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>  Program </mat-header-cell>
                         <mat-cell *matCellDef="let element"> {{element.program}} </mat-cell>
                       </ng-container>
                   
