--- a/FrontEnd/FrontEndCode/src/app/pages/dashboard/dashboard.component.scss
+++ b/FrontEnd/FrontEndCode/src/app/pages/dashboard/dashboard.component.scss
@@ -14,6 +14,11 @@
   font-size: 14px;
   width: 100%;
 }
+.mat-form-field ::placeholder {
+  font-size: 14px; /* Adjust the font size as needed */
+  /* Add any other styles you want for the placeholder text */
+}
+
 
 .mat-table {
   overflow: auto;
