--- a/FrontEnd/FrontEndCode/src/app/pages/login/login.component.html
+++ b/FrontEnd/FrontEndCode/src/app/pages/login/login.component.html
@@ -6,10 +6,10 @@
   
   <div class="col-md-6 d-none d-md-flex align-items-center">
     <div class="text-center">
-      <h2 class="green-heading">About Us</h2> <!-- Green Heading -->
-      <p class="styled-paragraph">
+      <!-- <h2 class="green-heading">About Us</h2>  -->
+      <!-- <p class="styled-paragraph">
         Founded in 1981, Operation Food Search (OFS) is a hunger relief organization that provides free food, nutrition education and innovative programs proven to reduce food insecurity. With a strategic focus aimed at ending childhood hunger, OFS empowers families and increases access to healthy and affordable food. The agency provides food and services to 200,000 individuals on a monthly basis – one-third of whom are children – through a network of 330 community partners in 42 Missouri and Illinois counties.
-      </p>
+      </p> -->
     </div>
   </div>
   <!-- <div class="about-us">
