--- a/FrontEnd/FrontEndCode/src/app/pages/dashboard/dashboard.component.html
+++ b/FrontEnd/FrontEndCode/src/app/pages/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
 
             .dashboard-heading {
                 flex: 10%;
-                background-color: #007bff; /* Adjust the background color */
+                background-color: #033265; /* Adjust the background color */
                 color: white; /* Adjust the text color */
                 display: flex;
                 justify-content: center;
@@ -49,34 +49,50 @@
                 <h1>Welcome,  {{userData.username}}</h1>
                 
                 <!-- (ID: {{ userData.id || 'N/A' }})!</h1> -->
-
+                
 
             </div>
+
             <main class="main-content">
+                <div class="button-container">
+  
+                    
+                    <div class="button-space"></div>
+                    <button mat-raised-button color="warn" [routerLink]="['/login']">Logout</button>
+                    
+                  </div>
                 <div class="actions-heading">Actions :</div>
                 <br>
                 <div class="button-container">
                 
                     <button class="icon-button"[routerLink]="['/Signup']" >
-                        <img src="assets/add-friend.png" alt="Button Image" style="width: 100px; height: 100px;"> 
+                        <img src="assets/adduser.png" alt="Button Image" style="width: 100px; height: 100px;"> 
                         Add Site user
+                    </button>
+
+                    <button class="icon-button"[routerLink]="['/edit-siteuser']" >
+                        <img src="assets/delete.png" alt="Button Image" style="width: 100px; height: 100px;"> 
+                        Remove Site user
                     </button>
 
                     <!-- <button class="icon-button"[routerLink]="['/Signup']" >
                         <img src="assets/edit.png" alt="Button Image" style="width: 100px; height: 100px;"> 
                     Add Meal Count
                     </button> -->
-
-                    <button class="icon-button"[routerLink]="['/SiteUserDashboard']" >
-                        <img src="assets/home-button.png" alt="Button Image" style="width: 100px; height: 100px;"> 
-                    Home
+                    <button class="icon-button"[routerLink]="['/addadmin']" >
+                        <img src="assets/addadmin.png" alt="Button Image" style="width: 100px; height: 100px;"> 
+                        add admin  
                     </button>
 
-                    <button class="icon-button"[routerLink]="['/Signup']" >
-                        <img src="assets/settings.png" alt="Button Image" style="width: 100px; height: 100px;"> 
-                    Settings
+                    <button class="icon-button"[routerLink]="['/deleteadmin']" >
+                        <img src="assets/deleteadmin.png" alt="Button Image" style="width: 100px; height: 100px;"> 
+                        Remove admin
                     </button>
-                    
+
+                    <button class="icon-button" (click)="openUpdatePasswordDialog()" >
+                        <img src="assets/update.png" alt="Button Image" style="width: 100px; height: 100px;"> 
+                        update  admin  password
+                    </button>
                 </div>
                 
 
@@ -95,54 +111,118 @@
                         </div>
                         </div>
                     </mat-card-content>
-                    <!-- <mat-card-actions>
-                        <button mat-button color="primary">Primary</button>
-                        <button mat-button color="accent">Action</button>
-                    </mat-card-actions> -->
                     </mat-card>
                 </div>
 
-                <div class="example-container mat-elevation-z8">
+<div class="filter-container custom-filter-container">
+    <!-- <mat-form-field>
+        <input matInput placeholder="Date (YYYY-MM-DD)" [(ngModel)]="filterDate">
+      </mat-form-field> -->
+    <mat-form-field>
+      <input matInput placeholder="Date (YYYY-MM-DD)" [(ngModel)]="filterDate">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Meal Type" [(ngModel)]="filterMealType">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Program" [(ngModel)]="filterProgram">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Site User ID" [(ngModel)]="filterSiteUserId">
+    </mat-form-field>
+    <button mat-raised-button color="primary" (click)="applyFilter()">Filter</button>
+  </div>
+  
+
+                  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 ">
+                    <!-- Username Column -->
+                    <ng-container matColumnDef="siteUserName">
+                      <th mat-header-cell *matHeaderCellDef  [style.height.px]="headerHeight" [style.background-color]="'black'" [style.color]="'white'">  Username </th>
+                      <td mat-cell *matCellDef="let element"> {{element.siteUserName}} </td>
+                    </ng-container>
+                    
+                    <!-- Meal Date Column -->
+                    <ng-container matColumnDef="mealdate">
+                      <th mat-header-cell *matHeaderCellDef  [style.height.px]="headerHeight" [style.background-color]="'black'" [style.color]="'white'"> Meal Date </th>
+                      <td mat-cell *matCellDef="let element"> {{element.mealdate}} </td>
+                    </ng-container>
+                    
+                    <!-- Meal Type Column -->
+                    <ng-container matColumnDef="mealtype">
+                      <th mat-header-cell *matHeaderCellDef  [style.height.px]="headerHeight" [style.background-color]="'black'" [style.color]="'white'"> Meal Type </th>
+                      <td mat-cell *matCellDef="let element"> {{element.mealtype}} </td>
+                    </ng-container>
+                    
+                    <!-- Program Column -->
+                    <ng-container matColumnDef="program">
+                      <th mat-header-cell *matHeaderCellDef  [style.height.px]="headerHeight" [style.background-color]="'black'" [style.color]="'white'"> Program </th>
+                      <td mat-cell *matCellDef="let element"> {{element.program}} </td>
+                    </ng-container>
+                    
+                    <!-- Meal Count Column -->
+                    <ng-container matColumnDef="mealcount">
+                      <th mat-header-cell *matHeaderCellDef  [style.height.px]="headerHeight" [style.background-color]="'black'" [style.color]="'white'"> Meal Count </th>
+                      <td mat-cell *matCellDef="let element"> {{element.mealcount}} </td>
+                    </ng-container>
+                    
+                    <!-- Comment Column -->
+                    <ng-container matColumnDef="comment">
+                      <th mat-header-cell *matHeaderCellDef  [style.height.px]="headerHeight" [style.background-color]="'black'" [style.color]="'white'"> Comment </th>
+                      <td mat-cell *matCellDef="let element"> {{element.comment}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="siteuserid">
+                        <th mat-header-cell *matHeaderCellDef  [style.height.px]="headerHeight" [style.background-color]="'black'" [style.color]="'white'"> siteuserid </th>
+                        <td mat-cell *matCellDef="let element"> {{element.siteuserid}} </td>
+                      </ng-container>
+                    
+                    <!-- Define the table rows -->
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                  </table>
+                  
+                <!-- <div class="example-container mat-elevation-z8">
                     <div class="example-header">
                       <mat-form-field>
-                        <input matInput (keyup)="applyFilter($any($event.target).value)" placeholder="Filter">
+                        <input matInput (keyup)="applyFilter('mealType',$any($event.target).value)" placeholder="Filter by mealType">
 
                       </mat-form-field>
-                    </div>
+                      <button mat-flat-button color="warn" (click)="resetFilters()">Reset</button>
+                    </div>  -->
+
+<!--                       
+                    <mat-table #table [dataSource]="dataSource" >
                   
-                    <mat-table #table [dataSource]="dataSource" matSort>
-                  
-                      <!-- Username Column -->
-                      <ng-container matColumnDef="username">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Username </mat-header-cell>
-                        <mat-cell *matCellDef="let element"> {{element.username}} </mat-cell>
+                      
+                      <ng-container matColumnDef="siteUserName">
+                        <mat-header-cell *matHeaderCellDef Select Start Time> Username </mat-header-cell>
+                        <mat-cell *matCellDef="let element"> {{element.siteUserName}} </mat-cell>
                       </ng-container>
                   
-                      <!-- Meal Date Column -->
+                     
                       <ng-container matColumnDef="mealDate">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header>  Meal Date </mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef    >  Meal Date </mat-header-cell>
                         <mat-cell *matCellDef="let element"> {{element.mealdate}} </mat-cell>
                       </ng-container>
                   
-                      <!-- Meal Type Column -->
+                      
                       <ng-container matColumnDef="mealType">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Meal Type </mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef    > Meal Type </mat-header-cell>
                         <mat-cell *matCellDef="let element"> {{element.mealtype}} </mat-cell>
                       </ng-container>
                   
-                      <!-- Program Column -->
+                
                       <ng-container matColumnDef="program">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header>  Program </mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef    >  Program </mat-header-cell>
                         <mat-cell *matCellDef="let element"> {{element.program}} </mat-cell>
                       </ng-container>
                   
-                      <!-- Meal Count Column -->
+                    
                       <ng-container matColumnDef="mealCount">
                         <mat-header-cell *matHeaderCellDef> Meal Count </mat-header-cell>
                         <mat-cell *matCellDef="let element"> {{element.mealcount}} </mat-cell>
                       </ng-container>
                   
-                      <!-- Comment Column -->
                       <ng-container matColumnDef="comment">
                         <mat-header-cell *matHeaderCellDef> Comment </mat-header-cell>
                         <mat-cell *matCellDef="let element"> {{element.comment}} </mat-cell>
@@ -151,8 +231,36 @@
                       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
                     </mat-table>
+                    
                   </div>
-                  
+
+
+                  <table>
+                    <thead>
+                      <tr>
+                        <th>Select Start Time</th>
+                        <th>Meal Date</th>
+                        <th>Meal Type</th>
+                        <th>Program</th>
+                        <th>Meal Count</th>
+                        <th>Comment</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                        <ng-container *ngFor="let element of dataSource1">
+                          <tr>
+                            <td>{{ element.siteUserName }}</td>
+                            <td>{{ element.mealDate }}</td>
+                            <td>{{ element.mealType }}</td>
+                            <td>{{ element.program }}</td>
+                            <td>{{ element.mealCount }}</td>
+                            <td>{{ element.comment }}</td>
+                          </tr>
+                        </ng-container>
+                      </tbody>
+                  </table>
+                   -->
+                 
             </main>
         </div>
     </body>
