--- a/FrontEnd/FrontEndCode/src/app/pages/signup-siteuser/signup-siteuser.component.html
+++ b/FrontEnd/FrontEndCode/src/app/pages/signup-siteuser/signup-siteuser.component.html
@@ -43,10 +43,6 @@
                   <input type="text" formControlName="siteAddress" placeholder="Site Address" required />
                 </div>
               
-                <!-- Meal Service Time Fields -->
-                <!-- ... Time picker fields ... -->
-              <!-- Breakfast Time Field -->
-              <!-- Breakfast Time Field -->
 <div class="form-group">
   <label class="bold-label" for="breakfastTime">Breakfast Time:</label>
   <div class="timepicker">
@@ -88,7 +84,7 @@
       aria-label="Lunch Start Time"
       [ngxTimepicker]="lunchStartTimepicker"
       readonly
-      formControlName="lunchStartTime"
+      formControlName="lunchTime"
     >
     <ngx-material-timepicker #lunchStartTimepicker [enableKeyboardInput]="true"></ngx-material-timepicker>
     
@@ -118,7 +114,7 @@
       aria-label="Supper Start Time"
       [ngxTimepicker]="supperStartTimepicker"
       readonly
-      formControlName="supperStartTime"
+      formControlName="supperTime"
     >
     <ngx-material-timepicker #supperStartTimepicker [enableKeyboardInput]="true"></ngx-material-timepicker>
     
@@ -148,7 +144,7 @@
       aria-label="Snack Start Time"
       [ngxTimepicker]="snackStartTimepicker"
       readonly
-      formControlName="snackStartTime"
+      formControlName="snackTime"
     >
     <ngx-material-timepicker #snackStartTimepicker [enableKeyboardInput]="true"></ngx-material-timepicker>
     
@@ -165,70 +161,7 @@
     <ngx-material-timepicker #snackEndTimepicker [enableKeyboardInput]="true"></ngx-material-timepicker>
   </div>
 </div>
-<!-- 
-<div class="form-group">
-    <label class="bold-label" for="breakfastTime">Breakfast Time:</label>
-    <div class="timepicker">
-      <input
-        #breakfastTimeInput
-        type="text"
-        placeholder="Select Start Time"
-        aria-label="Breakfast Time"
-        [ngxTimepicker]="breakfastTimepicker"
-        readonly
-        formControlName="breakfastTime" 
-      >
-      <ngx-material-timepicker #breakfastTimepicker [enableKeyboardInput]="true"></ngx-material-timepicker>
-    </div>
-  </div>
-  
 
-  <div class="form-group">
-    <label class="bold-label" for="lunchTime">Lunch Time:</label>
-    <div class="timepicker">
-      <input
-        type="text"
-        placeholder="Select Start Time"
-        aria-label="Lunch Time"
-        [ngxTimepicker]="lunchTimepicker"
-        readonly
-        formControlName="lunchTime" 
-      >
-      <ngx-material-timepicker #lunchTimepicker [enableKeyboardInput]="true"></ngx-material-timepicker>
-    </div>
-  </div>
-  
-
-  <div class="form-group">
-    <label class="bold-label" for="supperTime">Supper Time:</label>
-    <div class="timepicker">
-      <input
-        type="text"
-        placeholder="Select Start Time"
-        aria-label="Supper Time"
-        [ngxTimepicker]="supperTimepicker"
-        readonly
-        formControlName="supperTime" 
-      >
-      <ngx-material-timepicker #supperTimepicker [enableKeyboardInput]="true"></ngx-material-timepicker>
-    </div>
-  </div>
-  
- 
-  <div class="form-group">
-    <label class="bold-label" for="snackTime">Snack Time:</label>
-    <div class="timepicker">
-      <input
-        type="text"
-        placeholder="Select Start Time"
-        aria-label="Snack Time"
-        [ngxTimepicker]="snackTimepicker"
-        readonly
-        formControlName="snackTime" 
-      >
-      <ngx-material-timepicker #snackTimepicker [enableKeyboardInput]="true"></ngx-material-timepicker>
-    </div>
-  </div> -->
   <!-- Meal Days Field -->
 <div class="form-group meal-days-box">
     <label class="bold-label">Meal Days:</label>
@@ -268,6 +201,7 @@
               
                 <!-- Submit Button -->
                 <input class="button" type="submit" value="Register" />
+                <button  mat-raised-button color="primary" [routerLink]="['/Dashboard']">Go Back</button>
               </form>
               
         </div>
